# TaskRunner

./: .gitignore  Makefile  README.md  pyproject.toml  random.yml  requirements.txt  taskrunner.spec  tasks.yml
.github/: FUNDING.yml
docs/: helpers.md  tasks.md  variables.md
taskrunner/: __init__.py  __main__.py  cli.py  main.py
taskrunner.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
