[project]
name = "taskrunner"
version = "0.0.1"
authors = [
    {name = "Paul Glushak", email = "paul@glushak.net"}
]
dependencies = [
    "PyYAML",
    "setuptools"
]
[tool.buildsystem.entrypoints]
taskrunner = "taskrunner.cli:run"

[project.scripts]
taskrunner = "taskrunner.cli:run"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"